--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_NAME=almafront
 DB_USER=root
 DB_HOST=localhost
-DB_PASSWORD=Dan0217ale
+DB_PASSWORD=root
 DB_PORT=3306
 JWT_SECRET=rw-b2b-glp
 URL=http://localhost:3000
